syntax = "proto3";

package issue;

service issueReporter {
    rpc ReportIssue (issueRequest) returns (issueResponse);
}

message issueRequest {
    string userEmail = 1;
    string userDescription = 2;
    string category = 3;
    string subCategory = 4;
    bool urgent = 5;
    //add qrLink? (ignore)
      
    string timestamp = 6;
    string location = 7;

    string machineId = 8;
    // amigaID
    // other actual motor data expanded later
}

message issueResponse {
    bool success = 1;
    string message = 2;
}
